--- a/style.css
+++ b/style.css
@@ -3,3 +3,26 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+.header {
+    background-image: url("./assets/img/ba1.jpg");
+    background-size: cover;
+    background-color: #353535;
+    background-blend-mode: soft-light;
+}
+
+.header-card {
+    max-width: 40%; 
+    height: auto;
+    color: white;
+    text-align: end;
+    margin: 10%;
+}
+
+@media  screen and (max-width: 992px){
+    .header-card {
+        min-width: 90%;
+        text-align: center;
+        padding: 0 10%;
+    }
+}
