--- a/style.css
+++ b/style.css
@@ -1,7 +1,14 @@
 * {
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
+    box-sizing: border-box !important;
+}
+
+aside {
+    height: 50vh;
+}
+footer {
+    height: 100vh;
 }
 
 .header {
