--- a/style.css
+++ b/style.css
@@ -1,15 +1,10 @@
-:root {
-    --alto: calc(100vh - (86px + 56px));
+
+main{
+    min-height: 100%;
 }
-
-/* footer {
-    height: 70vh;
-} */
-
 .bg-color {
     background-color:  #353535;
 }
-
 
 .header {
     background-color: black ;
@@ -46,7 +41,7 @@ legend {
     color: white;
 }
 .section-container{
-    height: var(--alto);
+    min-height: calc(100vh - (86px + 56px));
 }
 
 .formContainer {
